objects/redwing__Criterion_Rating__c.object
<CustomObject>
    <fields>
        <fullName>redwing__Approver_Notes__c</fullName>
        <label>Approver Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>redwing__Archived__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Archived</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__Criterion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Criterion</label>
        <referenceTo>redwing__Criterion__c</referenceTo>
        <relationshipLabel>Criterion Ratings</relationshipLabel>
        <relationshipName>Criterion_Ratings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>redwing__Learning_Assignment__c</fullName>
        <label>Learning Assignment</label>
        <referenceTo>redwing__Learning_Assignment__c</referenceTo>
        <relationshipLabel>Criterion Ratings</relationshipLabel>
        <relationshipName>Criterion_Ratings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>redwing__Learning__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Learning</label>
        <referenceTo>redwing__Learning__c</referenceTo>
        <relationshipLabel>Criterion Ratings</relationshipLabel>
        <relationshipName>Criterion_Ratings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>redwing__Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent</label>
        <referenceTo>redwing__Criterion_Rating__c</referenceTo>
        <relationshipLabel>Criterion Ratings</relationshipLabel>
        <relationshipName>Criterion_Ratings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>redwing__Score__c</fullName>
        <label>Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>redwing__Task_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Task Approver</label>
        <referenceTo>redwing__Task_Approver__c</referenceTo>
        <relationshipLabel>Criterion Ratings</relationshipLabel>
        <relationshipName>Criterion_Ratings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>redwing__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Criterion_Ratings</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Criterion Rating</label>
    <nameField>
        <displayFormat>CRN-{0}</displayFormat>
        <label>Criterion Rating Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Criterion Ratings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>